<resources>
    <string name="app_name">HeartRyt Care</string>
    <string name="title_activity_main_menu">HeartRyt Care</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Help</string>
    <string name="compose_message_label">Message:</string>
    <string name="advised">Advised:</string>
    <string name="btn_send">Send</string>
    <string name="current_reading">Current Reading:</string>
    <string name="btn_ignore">Ignore</string>
    <string name="patient_label_template">Patient %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--NAVIGATION DRAWER-->
    <string name="journal">Journal</string>
    <string name="schedule">Schedule</string>
    <string name="measure">Measure</string>
    <string name="statistics">Statistics</string>
    <string name="doctor_nav">Doctor</string>
    <string name="patient_nav">Patient</string>
    <string name="messages">Messages</string>
    <string name="share">Share</string>
    <string name="sign_out">Sign Out</string>

    <!--SIGN UP | SIGN IN-->
    <string name="signup">Sign Up</string>
    <string name="signin">or sign in to your account</string>
    <string name="firstname">First Name*</string>
    <string name="lastname">Last Name*</string>
    <string name="license_number">License Number</string>
    <string name="contact_number">Contact Number*</string>
    <string name="email">E-mail*</string>
    <string name="password">Password*</string>
    <string name="doctor">I\'m a Doctor</string>
    <string name="patient">I\'m a Patient</string>
    <string name="age">Age*</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="title_activity_schedule_medication">ScheduleMedication</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_medication_intake_schedule">MedicationIntakeSchedule</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--SCHED FRAGMENT-->
    <string name="medication">Medication</string>
    <string name="medication_desc">Schedule your medications intake</string>
    <string name="appointment">Appointment</string>
    <string name="appointment_desc">Schedule your clinical appointments</string>

    <!--MEASURE FRAGMENT-->
    <string name="heart_rate">Heart Rate</string>
    <string name="heart_rate_desc">Measure your heart rate</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="blood_pressure_desc">Measure your blood pressure</string>
    <string name="blood_pressure_systolic">Systolic BP:</string>
    <string name="blood_pressure_diastolic">Diastolic BP:</string>
    <string name="blood_pressure_time_taken">Time Taken:</string>
    <string name="blood_pressure_error">Error: please restart BP device</string>
    <string name="blood_pressure_reading">Reading...</string>
    <string name="blood_pressure_critical">Critical Blood Pressure rate! Compose messageData and notify your doctor. Otherwise, ignore this alert.</string>
    <string name="blood_pressure_msg_template">Need immediate consultation! I reached critical blood pressure rate. %1$s</string>

    <!--DOCTOR FRAGMENT-->
    <string name="add_doctor">ADD DOCTOR</string>
    <string name="verification_code">VERIFICATION CODE</string>
    <string name="verify">VERIFY</string>

    <!--PATIENT FRAGMENT-->
    <string name="add_patient">ADD PATIENT</string>
    <string name="send_code">SEND CODE</string>
    <string name="cancel">CANCEL</string>
    <string name="hint_phone_number">09xxxxxxxxx</string>
    <string name="sms_message_template">Your verification code is %1$s. Code validity is 5 minutes. To renew, contact your assigning doctor</string>


    <!--HEART RATE MONITOR-->
    <string name="heartrate">Heart Rate: </string>
    <string name="bpm">BPM</string>
    <string name="instruction"> - Place your index finger on the rear camera.\n
                                - Make sure the camera is fully covered.\n
                                - Finally, place your finger then press START.</string>
    <string name="heartrate_critical">Heart Rate critical! Compose messageData and notify your doctor. Otherwise, ignore this alert.</string>
    <string name="heartrate_msg_template">Need immediate consultation! I reached critical heart rate. %1$s</string>

    <!--JOURNAL-->
    <string name="diet_plan">DIET PLAN</string>
    <string name="meals_taken">Meals Taken</string>
    <string name="vital_signs">VITAL SIGNS</string>
    <string name="heart_rate_bpm">Heart Rate (bpm)</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="mmhg">(mmHG)</string>
    <string name="temperature">Temperature (°C)</string>
    <string name="weight_hint">Weight (kg)</string>
    <string name="medications">MEDICATIONS</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="dosage">Dosage</string>
    <string name="no">No.</string>
    <string name="how_often">How often? (e.g. once a day)</string>
    <string name="notes">NOTES</string>
    <string name="other_details">Other details</string>
    <string name="save">SAVE</string>
    <string name="update">UPDATE</string>
    <string name="notice">List is empty.</string>

    <!--SCHEDULE-->
    <string name="schedule_medication">Schedule Medication</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="how_is_it_taken">How is it taken</string>
    <string name="number_of_times">Number of times</string>
    <string name="medication_time">Medication Time</string>
    <string name="date_of_commencement">Date of Commencement</string>
    <string name="number_of_days">Number of Days</string>
    <string name="alert">Alert</string>
    <string name="hint_med_name">Name of Medication</string>
    <string name="hint_num_med">Number of medicines to take</string>
    <string name="hint_how">e.g. oral</string>
    <string name="hint_num_times">How often do you need to take the medicine</string>
    <string name="hint_time">Set Time</string>
    <string name="hint_date">Set Date</string>
    <string name="hint_num_days">Set number of days you need to take it.</string>
    <string name="schedule_appointment">Schedule Appointment</string>
    <string name="header">Header</string>
    <string name="hint_header">Clinical Appointment Name</string>
    <string name="hint_appointment">Appointment Details</string>
    <string name="appoinment_time">Time of Appointment</string>
    <string name="appointment_date">Date of Appointment</string>

    <!--STATISTICS-->
    <string name="chart_title">Blood Pressure and Heart Rate\nData Chart</string>

    <string name="footnote">When your heart rate and blood pressure exceed\nthe values above, a messageData\nwill be sent to your doctor.</string>

</resources>


