<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="500dp"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blood_pressure_critical"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advised" />
        <TextView
            android:id="@+id/advisedRate"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_reading" />
        <TextView
            android:id="@+id/currentReading"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#ff6600"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compose_message_label"
        android:textStyle="italic"/>
    
    <EditText
        android:id="@+id/composeMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/sendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_send"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <Button
            android:id="@+id/ignoreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_ignore"
            android:layout_toStartOf="@+id/sendBtn"
            android:layout_toLeftOf="@id/sendBtn"/>
    </RelativeLayout>

</LinearLayout>