<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#640b0b"
        android:clickable="true"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/img_arrowback"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/schedule_appointment"
            android:textColor="#f9f9f5"
            android:textSize="18sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/main_app_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/round_white_bg"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/red_textcolor"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_header"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical"
                android:background="@drawable/round_white_bg"
                android:layout_margin="2dp"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/notes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/red_textcolor"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_appointment"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical"
                android:background="@drawable/round_white_bg"
                android:layout_margin="2dp"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/appoinment_time"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/red_textcolor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/et_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_time"
                    android:textSize="15sp"
                    android:layout_margin="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical"
                android:background="@drawable/round_white_bg"
                android:layout_margin="2dp"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/appointment_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/red_textcolor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/et_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_date"
                    android:textSize="15sp"
                    android:layout_margin="5dp"/>

            </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/addSched"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/updateSched"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/update"
                    android:visibility="gone"/>

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>