<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:hint="@string/hint_phone_number"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_below="@id/autoCompleteTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/addPatientBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_code"
        android:layout_below="@id/autoCompleteTextView"
        android:layout_toStartOf="@id/cancelBtn"
        android:layout_toLeftOf="@id/cancelBtn"/>

</RelativeLayout>