<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_app_bg"
    android:orientation="vertical"
    android:paddingTop="30dp">

    <RelativeLayout
        android:id="@+id/heartRate"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="18dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_white_bg"
        android:padding="10dp">

        <ImageView
            android:id="@+id/heartRateIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/heartrate" />

        <TextView
            android:id="@+id/heartRateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/heartRateIcon"
            android:text="@string/heart_rate"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/red_textcolor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/heartRateDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/heartRateText"
            android:layout_toRightOf="@id/heartRateIcon"
            android:text="@string/heart_rate_desc"
            android:textSize="10sp"
            android:textStyle="italic" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bloodPressure"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="18dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_white_bg"
        android:padding="10dp">

        <ImageView
            android:id="@+id/bloodPressureIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/bloodpressure" />

        <TextView
            android:id="@+id/bloodPressureText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bloodPressureIcon"
            android:layout_marginTop="5dp"
            android:text="@string/blood_pressure"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/red_textcolor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bloodPressureDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_pressure_desc"
            android:layout_toRightOf="@id/bloodPressureIcon"
            android:layout_below="@id/bloodPressureText"
            android:textSize="10sp"
            android:textStyle="italic" />

    </RelativeLayout>

</LinearLayout>